--- a/codebuild/buildspec.yml
+++ b/codebuild/buildspec.yml
@@ -7,11 +7,14 @@ phases:
       - echo "Installing HashiCorp Packer..."
       - pwd
       - ls -lrt
+      - ls -lrt packerdir
       - rm -rf packer*
       - curl -qL -o packer.zip https://releases.hashicorp.com/packer/0.12.3/packer_0.12.3_linux_amd64.zip && unzip packer.zip
       - echo "Installing jq..."
       - curl -qL -o jq https://stedolan.github.io/jq/download/linux64/jq && chmod +x ./jq
       - echo "Validating amazon-linux_packer-template.json"
+      - ls -lrt packer*
+      - which packer
       - ./packer validate -var "GITHUB_COMMITID=${CODEBUILD_RESOLVED_SOURCE_VERSION}" -var "IAMPROFILE=${PACKER_IAM_PROFILE}" packerdir/packerconfig.json
       
   build:
