--- a/codebuild/buildspec.yml
+++ b/codebuild/buildspec.yml
@@ -7,15 +7,16 @@ phases:
       - echo "Installing HashiCorp Packer..."
       - pwd
       - ls -lrt
-      - ls -lrt packerdir
+      - ls -lrt packdir
       - rm -rf packer*
       - curl -qL -o packer.zip https://releases.hashicorp.com/packer/0.12.3/packer_0.12.3_linux_amd64.zip && unzip packer.zip
       - echo "Installing jq..."
       - curl -qL -o jq https://stedolan.github.io/jq/download/linux64/jq && chmod +x ./jq
       - echo "Validating amazon-linux_packer-template.json"
+      - ls -lrt packdir
       - ls -lrt packer*
       - which packer
-      - ./packer validate -var "GITHUB_COMMITID=${CODEBUILD_RESOLVED_SOURCE_VERSION}" -var "IAMPROFILE=${PACKER_IAM_PROFILE}" packerdir/packerconfig.json
+      - ./packer validate -var "GITHUB_COMMITID=${CODEBUILD_RESOLVED_SOURCE_VERSION}" -var "IAMPROFILE=${PACKER_IAM_PROFILE}" packdir/packconfig.json
       
   build:
     commands:
@@ -30,7 +31,7 @@ phases:
       - aws configure set aws_session_token `./jq -r '.Token' aws_credentials.json`
       - echo "Building HashiCorp Packer template, amazon-linux_packer-template.json"
       #- ./packer build amazon-linux_packer-template.json
-      - ./packer build -color=false -var "GITHUB_COMMITID=${CODEBUILD_RESOLVED_SOURCE_VERSION}" -var "IAMPROFILE=${PACKER_IAM_PROFILE}" ./packerdir/packerconfig.json | tee build.log
+      - ./packer build -color=false -var "GITHUB_COMMITID=${CODEBUILD_RESOLVED_SOURCE_VERSION}" -var "IAMPROFILE=${PACKER_IAM_PROFILE}" ./packdir/packconfig.json | tee build.log
   
   post_build:
     commands:
