--- a/packdir/packconfig.json
+++ b/packdir/packconfig.json
@@ -62,7 +62,19 @@
     },
     {
       "type": "shell",
+      "inline": "sudo yum install httpd24 php56 -y"
+    },
+    {
+      "type": "shell",
       "inline": "sudo chown -R apache /var/www/html"
+    },
+    {
+      "type": "shell",
+      "inline": "sudo service httpd start"
+    },
+    {
+      "type": "shell",
+      "inline": "sudo chkconfig httpd on"
     }
   ]
 }
